STYLING: solved z-index issue for nav bars

--- a/styles/common.css
+++ b/styles/common.css
@@ -32,7 +32,7 @@ body{
 }
 
 .nav-bar-support{
-    height: 78px;
+    height: 77px;
 }
 
 .nav-brand{
@@ -90,7 +90,7 @@ body{
         width: fit-content;
     }
     .main-content{
-        margin-left: 235px;
+        margin-left: 228px;
     }
     .side-bar ul li{
         text-align: start;
